Copy & Paste a Scene strip will make the source go missing #118276

Closed
opened 2024-02-14 14:46:43 +01:00 by tintwotin · 5 comments

System Information
Operating system: Win 11
Graphics card: RTX2060
Blender Version: 4.2 Alpha

Short description of error
Copy & Paste a Scene strip will make the source go missing

Exact steps for others to reproduce the error
Add a new scene.
Add a Scene strip.
Copy & paste it.
Both will light up as Source missing.
copy_scene_strip.gif

**System Information** Operating system: Win 11 Graphics card: RTX2060 Blender Version: 4.2 Alpha **Short description of error** Copy & Paste a Scene strip will make the source go missing **Exact steps for others to reproduce the error** Add a new scene. Add a Scene strip. Copy & paste it. Both will light up as Source missing. ![copy_scene_strip.gif](/attachments/9ecfbdb8-edd7-46f3-927e-7038b79b0a43)
tintwotin added the
Status
Needs Triage
Priority
Normal
Type
Report
labels 2024-02-14 14:46:44 +01:00
tintwotin added this to the Video Sequencer project 2024-02-14 14:46:46 +01:00
Iliya Katushenock removed this from the Video Sequencer project 2024-02-14 14:50:01 +01:00
Iliya Katushenock added the
Interest
Video Sequencer
label 2024-02-14 14:50:11 +01:00
Member

Thanks for the report. Can confirm

Thanks for the report. Can confirm
Member

Changed in e7f0bb24f7
@ZedDB ^

Changed in e7f0bb24f72f7a9b074b31fec9966f8a4c373e97 @ZedDB ^
Sebastian Parborg added
Priority
Normal
Type
Known Issue
and removed
Priority
High
Type
Report
labels 2024-02-15 11:10:53 +01:00

As it says in the commit, this is on purpose.

This functionality will not be available until a proposal on how to safely and properly handle this is created and greenlit (as stated in the commit).
The issue is that we don't have any way to tell if a scene is exactly the same as the one we are pasting. so if someone copy pastes a lot of scene, it will quickly bloat the file with duplicate scene data including meshes, textures, simulation data etc.

As it says in the commit, this is on purpose. This functionality will not be available until a proposal on how to safely and properly handle this is created and greenlit (as stated in the commit). The issue is that we don't have any way to tell if a scene is exactly the same as the one we are pasting. so if someone copy pastes a lot of scene, it will quickly bloat the file with duplicate scene data including meshes, textures, simulation data etc.
Author

What is the timeline on this? This is effectively breaking several add-ons of mine, which through workarounds made the scene strips useable in spite of their current poor performance.

I'm surprised that working features are just removed like that, and just marked as a Known Issue, instead of just making the flaws of the feature until a solution has been found.

What is the timeline on this? This is effectively breaking several add-ons of mine, which through workarounds made the scene strips useable in spite of their current poor performance. I'm surprised that working features are just removed like that, and just marked as a Known Issue, instead of just making the flaws of the feature until a solution has been found.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-02-15 16:32:13 +01:00

What is the timeline on this?

For this specific issue? Now.

For some reason I completely misunderstood the report and thought this was about the pasted strip. Even if the video makes it clear that the source strip also gets nulled out.

For the pasted strip I will create TODO task.

Thanks for reporting this as the issue was really bad, sorry for the misunderstanding.

> What is the timeline on this? For this specific issue? Now. For some reason I completely misunderstood the report and thought this was about the pasted strip. Even if the video makes it clear that the source strip also gets nulled out. For the pasted strip I will create TODO task. Thanks for reporting this as the issue was really bad, sorry for the misunderstanding.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#118276
No description provided.