Fix #118276: IDs were remapped by mistake when copying in the VSE

All IDs in the current bmain were remapped while it should have only
been done for IDs in the dummy scene created for the copy operation.